white space issue

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -25,6 +25,7 @@ $bp-largest: 106em;  // 1700px
 html {
     box-sizing: border-box;
     font-size: 100%;
+    width: 100%;
     overflow-x: hidden;
 
     @media only screen and (max-width: $bp-largest) {
@@ -41,6 +42,7 @@ body {
     //color: $color-grey-dark-2;
     font-weight: 300;
     line-height: 1.6;
+    width: 100%;
     overflow-x: hidden;
 
 }
